<resources>
    <string name="app_name">Anticede</string>
    <string name="logo_description">Logo Aplikasi Anticede</string>

    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>

    <string name="title_home">Home</string>
    <string name="title_about">About Us</string>
    <string name="title_disclaimer">Disclaimer</string>

    <string name="team_member_photo">Team Member Photo</string>
    <string name="name">Team Member Name</string>
    <string name="id">Team Member Bangkit Id</string>
    <string name="disclaimer_text">Disclaimer</string>
    <string name="disclaimer_info_text_1">Segala informasi yang digunakan untuk aplikasi ini dibuat dengan maksud baik dan hanya untuk wawasan saja. Aplikasi ini tidak menjamin kelengkapan, keakuratan, dan keandalan segala informasi yang digunakan.</string>
    <string name="disclaimer_info_text_2">Segala tindakan yang anda lakukan atas informasi yang kami sediakan adalah tanggung jawab anda. Pengembang aplikasi ini tidak akan menanggung segala kerugian dan / atau kerusakan yang anda alami berkat menggunakan aplikasi ini.</string>
    <string name="additional_info">Informasi Tambahan</string>
    <string name="additional_info_description_1">Salah satu prioritas aplikasi ini adalah menyediakan perlindungan bagi anak-anak saat mereka menggunakan internet. Kami menyarankan para orang tua atau wali untuk mengawasi, berpartisipasi, dan / atau membimbing aktivitas mereka.</string>
    <string name="additional_info_description_2">Aplikasi ini tidak menyimpan informasi pribadi penggunanya selain username dan umur anda. Bila anda merasa memasukkan informasi pribadi lain milik anda pada aplikasi ini, kami sarankan untuk menghubungi kami sesegera mungkin dan kami akan menghapus informasi tersebut.</string>
    <string name="agreement">Persetujuan</string>
    <string name="agreement_description">Dengan menggunakan aplikasi ini, Anda setuju dengan syarat, ketentuan, dan disklaimer aplikasi ini.</string>
    <string name="tab_text_1">Daftar</string>
    <string name="tab_text_2">Masuk</string>
    <string name="button_report_text">Lapor</string>
    <string name="record_button_description">Rekam Suara Anda</string>
    <string name="upload_file_description">Pilih File Audio</string>
    <string name="record_label">Rekam\nAudio</string>
    <string name="upload_file_label">File \n Audio</string>
    <string name="send_text">Kirim</string>
    <string name="play_button">Play Audio</string>
    <string name="recording_name">Title</string>
    <string name="recording_date">File Date</string>
    <string name="recording_length">00:00</string>
    <string name="chooseRecorder">Choose a Recording</string>
    <string name="warning2">Belum ada file untuk di putar/stop!</string>
    <string name="warning3">Anticede Data Disclaimer Request Remove</string>
    <string name="warning4">Mohon hapus data saya dari aplikasi Anticede</string>
    <string name="warning5">Rekam atau pilih file terlebih dahulu!</string>
    <string name="warning6">Install aplikasi perekam suara terlebih dahulu!</string>
    <string name="password_warning">Password tidak sama!</string>
    <string name="username_warning">Username kurang dari 6 karakter!</string>
    <string name="warning_empty_age">Umur tidak boleh kosong</string>
    <string name="warning_empty_password">Password tidak boleh kosong</string>
    <string name="warning_expired_cookie">Silahkan logout lalu login kembali</string>
    <string name="warning_empty_text">Text Masih Kosong</string>
    <string name="register_success">Register Success</string>
    <string name="register_success2">Akun anda berhasil dibuat, silahkan untuk melakukan login</string>
    <string name="yes">OK</string>
    <string name="empty_username_warning">Username tidak boleh kosong</string>
    <string name="warning_empty_login">Isikan form dengan benar!</string>
    <string name="text_login_admin">atau masuk sebagai admin</string>

    <!-- "About Us" Page Data Resources -->
    <string-array name="name">
        <item>Muchammad Alfi Karom</item>
        <item>Martina Steffany Darmawan</item>
        <item>Rashid Adani Maulana Jatri</item>
        <item>Rio Risqi Akbar Herlambang</item>
        <item>Vasant Paradissa Nuno Sakti</item>
        <item>Muhammad Zaky Al Fatih</item>
    </string-array>

    <string-array name="id">
        <item>(M7012F1248)</item>
        <item>(M2002G0035)</item>
        <item>(A7214F1985)</item>
        <item>(A2214F1986)</item>
        <item>(C2214F1987)</item>
        <item>(C2012F1251)</item>
    </string-array>

    <string-array name="linkedin">
        <item>https://www.linkedin.com/in/muchammad-alfi-karom-74b9b2201/</item>
        <item>https://www.linkedin.com/in/martina-steffany/</item>
        <item>https://www.linkedin.com/in/rashidmaulana08/</item>
        <item>https://www.linkedin.com/in/rio-risqi-akbar-herlambang-61134b202/</item>
        <item>https://www.linkedin.com/in/vasantpns/</item>
        <item>https://www.linkedin.com/in/muhammad-zaky-al-fatih-447231201/</item>
    </string-array>

    <integer-array name="photo">
        <item>@drawable/alfi</item>
        <item>@drawable/martina</item>
        <item>@drawable/rashid</item>
        <item>@drawable/rio</item>
        <item>@drawable/vasant</item>
        <item>@drawable/zaky</item>
    </integer-array>

    <string name="username_hint"><font size="15">Masukkan username anda</font></string>
    <string name="password_hint"><font size="15">Masukkan kata sandi anda</font></string>
    <string name="confirm_hint"><font size="15">Pastikan kata sandi sama</font></string>
    <string name="age_hint"><font size="15">Masukkan umur anda</font></string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="admin_username_label">Username Admin</string>
    <string name="admin_password_label">Password Admin</string>
    <string name="age_label">Umur</string>
    <string name="age_label2">Umur:</string>
    <string name="confirm_label">Konfirmasi Password</string>
    <string name="register_text">Daftar</string>
    <string name="login_text">Masuk</string>
    <string name="password_warning2">Password kurang dari 6 karakter!</string>
    <string name="delete_button">delete button</string>
    <string name="confirmationTitle">Hapus Akun</string>
    <string name="confirmDelete">Anda yakin ingin menghapus akun ini?</string>

    <string name="checkPornografi">Ucapan anda termasuk pornografi.</string>
    <string name="resultPornografi">\n\nUcapan anda termasuk Pornografi dan melanggar pasal X ayat Z.</string>

    <string name="checkSara">Ucapan anda termasuk SARA.</string>
    <string name="resultSara">\n\nUcapan anda termasuk SARA dan melanggar pasal X ayat Z.</string>

    <string name="checkPNamaBaik">Ucapan anda termasuk pencemaran nama baik.</string>
    <string name="resultPNamaBaik">\n\nUcapan anda termasuk Pencemaran Nama Baik dan melanggar pasal X ayat Z.</string>

    <string name="checkRadikal">Ucapan anda termasuk radikalisme.</string>
    <string name="resultRadikal">\n\nUcapan anda termasuk Radikalisme dan melanggar pasal X ayat Z.</string>

    <string name="checkNonToxic">Ucapan anda tidak mengandung kata-kata kotor :D.</string>
    <string name="resultNonToxic">\n\nUcapan anda tidak mengandung kata-kata kotor :D</string>

    <string name="resultDetectionError">Maaf terjadi kesalahan, coba untuk merekam kembali suara anda.</string>
</resources>