<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="8dp"
        android:fontFamily="@font/montserrat_bold"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/black">

    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="503dp"
        android:src="@drawable/background_colorful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="ContentDescription" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_background"
        android:contentDescription="@string/record_button_description"
        android:elevation="10dp"
        android:scaleType="centerInside"
        android:src="@drawable/recordbutton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarn" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="100dp"
        android:background="@color/white"
        android:contentDescription="@string/upload_file_description"
        android:scaleType="centerInside"
        android:src="@drawable/fileupload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarn" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="2"
        android:text="@string/record_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="110dp"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="2"
        android:text="@string/upload_file_label"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3" />

    <TextView
        android:id="@+id/tvWarn"
        android:layout_width="268dp"
        android:layout_height="165dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/border_back"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="center"
        android:maxLines="8"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingEnd="12dp"
        android:paddingStart="12dp"
        android:scrollbars="vertical"
        android:fadeScrollbars="false"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/send_text"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWarn" />

    <ImageView
        android:id="@+id/playBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_baseline_play_circle_filled_24"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <ImageView
        android:id="@+id/stopBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/play_button"
        android:elevation="10dp"
        android:src="@drawable/ic_baseline_stop_circle_24"
        app:layout_constraintStart_toEndOf="@id/playBtn"
        app:layout_constraintTop_toTopOf="@id/playBtn" />

    <TextView
        android:id="@+id/recordingTitle"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/montserrat_regular"
        android:maxLines="2"
        android:text="@string/recording_name"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toEndOf="@id/stopBtn"
        app:layout_constraintTop_toTopOf="@+id/stopBtn" />

    <TextView
        android:id="@+id/recordingDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="6dp"
        android:textSize="12sp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/recording_date"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@id/stopBtn"
        app:layout_constraintTop_toBottomOf="@+id/recordingTitle" />

    <TextView
        android:id="@+id/recordingLength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/recording_length"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>